Fix webkit layout issues for side menu

--- a/src/assets/styles/components/layout/sidebar/_SideMenu.scss
+++ b/src/assets/styles/components/layout/sidebar/_SideMenu.scss
@@ -1,12 +1,11 @@
 .sidemenu {
   display: flex;
-  flex-direction: column;
-
+  flex-flow: column;
   height: calc(100% - #{$header-height});
-  overflow-y: auto;
 
-  > .-sidemenu-footer {
-    margin-top: auto;
+  > .-sidemenu-grow {
+    flex-grow: 1;
+    overflow-y: auto;
   }
 
   .nav .nav-link {
